<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_category">

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.cendrawasih.mangan.ui.home.HomeFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.cendrawasih.mangan.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.cendrawasih.mangan.ui.akun.AkunFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun" />
</navigation>