<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sp_rectangle_main"
                    android:contentDescription="@string/txt_home_background"
                    android:fitsSystemWindows="true" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_regular_400"
                        android:text="@string/txt_hello"
                        android:textColor="@color/bw_100"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulish_bold_700"
                        android:text="@string/txt_name_user"
                        android:textColor="@color/bw_100"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_user">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_search"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_edt_focus"
                            android:fontFamily="@font/mulish_semibold_600"
                            android:hint="@string/txt_search"
                            android:inputType="text"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="8dp"
                            android:textCursorDrawable="@color/red_300"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_search"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/ic_search"
                            android:gravity="center" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/mulish_bold_700"
                        android:text="@string/category"
                        android:textSize="14sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_category"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_category" />
                </LinearLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <include layout="@layout/item_category_shimmer" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/mulish_bold_700"
                        android:text="@string/best_meal"
                        android:textSize="14sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_meal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        tools:listitem="@layout/item_meal" />
                </LinearLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_meal_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/item_meal_shimmer" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>